HMIN104-CI/Projet/pp/Autre/langageAST3Parser.java
// Generated from langageAST3.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class langageAST3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, Number=37, Identif=38, 
		WS=39;
	public static final int
		RULE_listexpr = 0, RULE_listDec = 1, RULE_dec = 2, RULE_listeDecVar = 3, 
		RULE_listeDecFonc = 4, RULE_decVar = 5, RULE_decPar = 6, RULE_prog = 7, 
		RULE_decFonc = 8, RULE_listDecPar = 9, RULE_instr = 10, RULE_expr = 11, 
		RULE_fun = 12, RULE_app = 13, RULE_type = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"listexpr", "listDec", "dec", "listeDecVar", "listeDecFonc", "decVar", 
			"decPar", "prog", "decFonc", "listDecPar", "instr", "expr", "fun", "app", 
			"type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "'('", "')'", "'()'", "':='", "'if'", "'then'", 
			"'else'", "'['", "']'", "'while'", "'do'", "'skip'", "';'", "'false'", 
			"'true'", "'+'", "'-'", "'*'", "'/'", "'and'", "'or'", "'<'", "'<='", 
			"'>'", "'>='", "'='", "'!='", "'not'", "'new array of '", "'read'", "'write'", 
			"'integer'", "'boolean'", "'array of type '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "Number", "Identif", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "langageAST3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public langageAST3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListexprContext extends ParserRuleContext {
		public ArrayList<Expr> lExp;
		public ExprContext e;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ListexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterListexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitListexpr(this);
		}
	}

	public final ListexprContext listexpr() throws RecognitionException {
		ListexprContext _localctx = new ListexprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_listexpr);
		 ((ListexprContext)_localctx).lExp = new ArrayList<Expr>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				((ListexprContext)_localctx).e = expr(0);
				 _localctx.lExp.add(((ListexprContext)_localctx).e.e); 
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << Number) | (1L << Identif))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListDecContext extends ParserRuleContext {
		public ArrayList<Dec> lDec;
		public DecContext e;
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public ListDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterListDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitListDec(this);
		}
	}

	public final ListDecContext listDec() throws RecognitionException {
		ListDecContext _localctx = new ListDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listDec);
		 ((ListDecContext)_localctx).lDec =  new ArrayList<Dec>(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(37);
					((ListDecContext)_localctx).e = dec();
					 _localctx.lDec.add(((ListDecContext)_localctx).e.decc); 
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(42); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public Dec decc;
		public DecVarContext decV;
		public DecFoncContext decF;
		public DecFoncContext decFonc;
		public DecVarContext decVar() {
			return getRuleContext(DecVarContext.class,0);
		}
		public DecFoncContext decFonc() {
			return getRuleContext(DecFoncContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((DecContext)_localctx).decV = decVar();
				 ((DecContext)_localctx).decc =  new DecVar(((DecContext)_localctx).decV.decVa); 
				}
				break;
			case Identif:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				((DecContext)_localctx).decF = ((DecContext)_localctx).decFonc = decFonc();
				 ((DecContext)_localctx).decc =  new DecFonc(((DecContext)_localctx).decFonc.decFo); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListeDecVarContext extends ParserRuleContext {
		public ArrayList<DecVar> lDecVar;
		public DecVarContext e;
		public List<DecVarContext> decVar() {
			return getRuleContexts(DecVarContext.class);
		}
		public DecVarContext decVar(int i) {
			return getRuleContext(DecVarContext.class,i);
		}
		public ListeDecVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listeDecVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterListeDecVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitListeDecVar(this);
		}
	}

	public final ListeDecVarContext listeDecVar() throws RecognitionException {
		ListeDecVarContext _localctx = new ListeDecVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listeDecVar);
		 ((ListeDecVarContext)_localctx).lDecVar =  new ArrayList<DecVar>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				((ListeDecVarContext)_localctx).e = decVar();
				 _localctx.lDecVar.add(((ListeDecVarContext)_localctx).e.decVa); 
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListeDecFoncContext extends ParserRuleContext {
		public ArrayList<DecFonc> lDecFo;
		public DecFoncContext e;
		public List<DecFoncContext> decFonc() {
			return getRuleContexts(DecFoncContext.class);
		}
		public DecFoncContext decFonc(int i) {
			return getRuleContext(DecFoncContext.class,i);
		}
		public ListeDecFoncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listeDecFonc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterListeDecFonc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitListeDecFonc(this);
		}
	}

	public final ListeDecFoncContext listeDecFonc() throws RecognitionException {
		ListeDecFoncContext _localctx = new ListeDecFoncContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listeDecFonc);
		 ((ListeDecFoncContext)_localctx).lDecFo =  new ArrayList<DecFonc>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				((ListeDecFoncContext)_localctx).e = decFonc();
				 _localctx.lDecFo.add(((ListeDecFoncContext)_localctx).e.decFo); 
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identif );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecVarContext extends ParserRuleContext {
		public DecVar decVa;
		public Token iden;
		public TypeContext ty;
		public TerminalNode Identif() { return getToken(langageAST3Parser.Identif, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DecVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterDecVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitDecVar(this);
		}
	}

	public final DecVarContext decVar() throws RecognitionException {
		DecVarContext _localctx = new DecVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__0);
			setState(67);
			((DecVarContext)_localctx).iden = match(Identif);
			setState(68);
			match(T__1);
			setState(69);
			((DecVarContext)_localctx).ty = type();
			 ((DecVarContext)_localctx).decVa =  new DecVar((((DecVarContext)_localctx).iden!=null?((DecVarContext)_localctx).iden.getText():null), ((DecVarContext)_localctx).ty.t); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecParContext extends ParserRuleContext {
		public DecPar decPa;
		public Token iden;
		public TypeContext ty;
		public ExprContext e;
		public TerminalNode Identif() { return getToken(langageAST3Parser.Identif, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DecParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decPar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterDecPar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitDecPar(this);
		}
	}

	public final DecParContext decPar() throws RecognitionException {
		DecParContext _localctx = new DecParContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decPar);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				((DecParContext)_localctx).iden = match(Identif);
				setState(73);
				match(T__1);
				setState(74);
				((DecParContext)_localctx).ty = type();
				 ((DecParContext)_localctx).decPa =  new DecPar((((DecParContext)_localctx).iden!=null?((DecParContext)_localctx).iden.getText():null), ((DecParContext)_localctx).ty.t);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((DecParContext)_localctx).e = expr(0);
				 ((DecParContext)_localctx).decPa =  new Expr(((DecParContext)_localctx).e.e);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public Prog pr;
		public ListDecContext lDec;
		public InstrContext inst;
		public ListDecContext listDec() {
			return getRuleContext(ListDecContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_prog);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				((ProgContext)_localctx).lDec = listDec();
				setState(83);
				((ProgContext)_localctx).inst = instr(0);
				 ((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).lDec.lDec, ((ProgContext)_localctx).inst.i); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((ProgContext)_localctx).inst = instr(0);
				 ((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).inst.i); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				((ProgContext)_localctx).lDec = listDec();
				 ((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).lDec.lDec); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecFoncContext extends ParserRuleContext {
		public DecFonc decFo;
		public Token iden;
		public ListDecParContext lDecPa;
		public TypeContext ty;
		public InstrContext inst;
		public ListeDecVarContext lDecVa;
		public TerminalNode Identif() { return getToken(langageAST3Parser.Identif, 0); }
		public ListDecParContext listDecPar() {
			return getRuleContext(ListDecParContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public ListeDecVarContext listeDecVar() {
			return getRuleContext(ListeDecVarContext.class,0);
		}
		public DecFoncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decFonc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterDecFonc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitDecFonc(this);
		}
	}

	public final DecFoncContext decFonc() throws RecognitionException {
		DecFoncContext _localctx = new DecFoncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decFonc);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				((DecFoncContext)_localctx).iden = match(Identif);
				setState(95);
				match(T__2);
				setState(96);
				((DecFoncContext)_localctx).lDecPa = listDecPar();
				setState(97);
				match(T__3);
				setState(98);
				match(T__1);
				setState(99);
				((DecFoncContext)_localctx).ty = type();
				setState(100);
				((DecFoncContext)_localctx).inst = instr(0);
				 ((DecFoncContext)_localctx).decFo =  new DecFonc((((DecFoncContext)_localctx).iden!=null?((DecFoncContext)_localctx).iden.getText():null), ((DecFoncContext)_localctx).lDecPa.lDecPar, ((DecFoncContext)_localctx).ty.t, ((DecFoncContext)_localctx).inst.i); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				((DecFoncContext)_localctx).iden = match(Identif);
				setState(104);
				match(T__4);
				setState(105);
				match(T__1);
				setState(106);
				((DecFoncContext)_localctx).ty = type();
				setState(107);
				((DecFoncContext)_localctx).inst = instr(0);
				 ((DecFoncContext)_localctx).decFo =  new DecFonc((((DecFoncContext)_localctx).iden!=null?((DecFoncContext)_localctx).iden.getText():null), ((DecFoncContext)_localctx).ty.t, ((DecFoncContext)_localctx).inst.i); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				((DecFoncContext)_localctx).iden = match(Identif);
				setState(111);
				match(T__2);
				setState(112);
				((DecFoncContext)_localctx).lDecPa = listDecPar();
				setState(113);
				match(T__3);
				setState(114);
				match(T__1);
				setState(115);
				((DecFoncContext)_localctx).ty = type();
				setState(116);
				((DecFoncContext)_localctx).lDecVa = listeDecVar();
				setState(117);
				((DecFoncContext)_localctx).inst = instr(0);
				 ((DecFoncContext)_localctx).decFo =  new DecFonc((((DecFoncContext)_localctx).iden!=null?((DecFoncContext)_localctx).iden.getText():null), ((DecFoncContext)_localctx).lDecPa.lDecPar, ((DecFoncContext)_localctx).ty.t, ((DecFoncContext)_localctx).lDecVa.lDecVar, ((DecFoncContext)_localctx).inst.i); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				((DecFoncContext)_localctx).iden = match(Identif);
				setState(121);
				match(T__4);
				setState(122);
				match(T__1);
				setState(123);
				((DecFoncContext)_localctx).ty = type();
				setState(124);
				((DecFoncContext)_localctx).lDecVa = listeDecVar();
				setState(125);
				((DecFoncContext)_localctx).inst = instr(0);
				 ((DecFoncContext)_localctx).decFo =  new DecFonc((((DecFoncContext)_localctx).iden!=null?((DecFoncContext)_localctx).iden.getText():null), ((DecFoncContext)_localctx).ty.t, ((DecFoncContext)_localctx).lDecVa.lDecVar, ((DecFoncContext)_localctx).inst.i); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListDecParContext extends ParserRuleContext {
		public ArrayList<DecPar> lDecPar;
		public DecParContext e;
		public List<DecParContext> decPar() {
			return getRuleContexts(DecParContext.class);
		}
		public DecParContext decPar(int i) {
			return getRuleContext(DecParContext.class,i);
		}
		public ListDecParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listDecPar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterListDecPar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitListDecPar(this);
		}
	}

	public final ListDecParContext listDecPar() throws RecognitionException {
		ListDecParContext _localctx = new ListDecParContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listDecPar);
		 ((ListDecParContext)_localctx).lDecPar =  new ArrayList<DecPar>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				((ListDecParContext)_localctx).e = decPar();
				 _localctx.lDecPar.add(((ListDecParContext)_localctx).e.decPa); 
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << Number) | (1L << Identif))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstrContext extends ParserRuleContext {
		public Inst i;
		public InstrContext i1;
		public Token iden;
		public ExprContext e1;
		public InstrContext i2;
		public ExprContext e2;
		public ExprContext e3;
		public TerminalNode Identif() { return getToken(langageAST3Parser.Identif, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public FunContext fun() {
			return getRuleContext(FunContext.class,0);
		}
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).enterInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langageAST3Listener ) ((langageAST3Listener)listener).exitInstr(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		return instr(0);
	}
